<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/comment_dialog_background">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_total_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="71条评论" />

        <EditText
            android:id="@+id/et_comment"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/comment_background"
            android:hint="@string/edit_comment"
            android:inputType="text"
            android:padding="8dp"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_comment" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_send"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@color/color_translucent"
            android:text="@string/send_comment"
            android:textSize="13sp"
            app:layout_constraintBaseline_toBaselineOf="@id/et_comment"
            app:layout_constraintLeft_toRightOf="@+id/et_comment" />

    <com.hazz.kotlinmvp.view.MultipleStatusView
        android:id="@+id/multipleStatusView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_comment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="8dp" />

        <TextView
            android:id="@+id/no_data_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_data"
            android:visibility="gone" />

    </com.hazz.kotlinmvp.view.MultipleStatusView>
</androidx.constraintlayout.widget.ConstraintLayout>

