<?xml version="1.0" encoding="utf-8"?>
<com.hazz.kotlinmvp.view.MultipleStatusView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/multipleStatusView"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:padding="50dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reset_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="更改密码"/>

    <com.hazz.kotlinmvp.view.ClearEditText
        android:id="@+id/password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:hint="@string/login_password_hint_text"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="10dp"
        android:background="@drawable/comment_background"
        android:singleLine="true"
        android:textColor="@color/color_gray"
        android:textColorHint="@color/color_darker_gray"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/reset_title"
        android:textSize="15sp"
         />

    <com.hazz.kotlinmvp.view.ClearEditText
        android:id="@+id/second_password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:hint="@string/login_second_password_hint_text"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="10dp"
        android:background="@drawable/comment_background"
        android:singleLine="true"
        android:textColor="@color/color_gray"
        android:textColorHint="@color/color_darker_gray"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/password_view" />

    <Button
        android:id="@+id/confirm_button"
        android:text="@string/confirm"
        android:textSize="12sp"
        android:background="@drawable/login_btn_background"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/second_password_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</com.hazz.kotlinmvp.view.MultipleStatusView>